--- a/Shape/Shape WatchKit App/Base.lproj/Interface.storyboard
+++ b/Shape/Shape WatchKit App/Base.lproj/Interface.storyboard
@@ -6,16 +6,16 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="16012"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
+        <!--InterfaceController-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Shape_WatchKit_App" customModuleProvider="target">
+                <controller identifier="InterfaceController" id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Shape_WatchKit_App" customModuleProvider="target">
                     <items>
                         <label alignment="center" text="SHAPE TEST" id="wWK-9X-U1D">
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="font" type="system" pointSize="24"/>
                         </label>
-                        <button width="1" height="60" alignment="left" title="Run Shape Test" id="8ov-Mt-bNO">
+                        <button width="129" height="55" alignment="center" title="Run Shape Test" id="8ov-Mt-bNO">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="font" type="system" weight="semibold" pointSize="23"/>
@@ -23,30 +23,35 @@
                                 <segue destination="fUw-M8-Z6B" kind="push" id="6ex-ya-9PW"/>
                             </connections>
                         </button>
+                        <button width="132" height="45" alignment="center" title="Results" id="dXe-5R-sZv">
+                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="backgroundColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="font" type="system" weight="semibold" pointSize="25"/>
+                        </button>
                     </items>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </controller>
             </objects>
             <point key="canvasLocation" x="59" y="-45"/>
         </scene>
-        <!--Interface Controller-->
+        <!--Instructions Interface Controller-->
         <scene sceneID="Bci-Fn-zO4">
             <objects>
-                <controller id="fUw-M8-Z6B">
+                <controller id="fUw-M8-Z6B" customClass="InstructionsInterfaceController" customModule="Shape_WatchKit_Extension">
                     <items>
                         <group width="1" height="144" alignment="left" layout="vertical" spacing="3" id="ynE-TX-JAG" userLabel="InstructionsGroup">
                             <items>
-                                <label alignment="center" text="Instructions" id="D4Q-la-2qk">
+                                <label height="25" alignment="center" text="Instructions" id="D4Q-la-2qk">
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
-                                    <fontDescription key="font" type="system" weight="medium" pointSize="21"/>
+                                    <fontDescription key="font" type="system" weight="medium" pointSize="22"/>
                                 </label>
-                                <imageView width="1" widthAdjustment="7" height="78" alignment="center" image="Frame2" id="nuC-bp-5og"/>
+                                <imageView width="1" widthAdjustment="7" height="74" alignment="center" image="InstructionsImage" id="nuC-bp-5og"/>
                                 <group width="1" alignment="left" id="Hku-oF-HvH">
                                     <items>
                                         <button width="0.90000000000000002" height="39" alignment="center" verticalAlignment="bottom" title="START" id="6cQ-56-10H">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <fontDescription key="font" type="system" weight="medium" pointSize="22"/>
+                                            <fontDescription key="font" type="system" weight="semibold" pointSize="24"/>
                                             <connections>
                                                 <segue destination="Tko-NX-12F" kind="modal" id="AN4-GX-uvw"/>
                                             </connections>
@@ -66,35 +71,43 @@
             <objects>
                 <controller id="Tko-NX-12F" customClass="RunShapeTestInterfaceController" customModule="Shape_WatchKit_Extension">
                     <items>
+                        <table alignment="left" id="rdh-9n-njt">
+                            <items>
+                                <tableRow id="Jsq-gC-kf6">
+                                    <group key="rootItem" width="1" alignment="left" id="Sha-aC-o9B"/>
+                                </tableRow>
+                            </items>
+                            <color key="backgroundColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                        </table>
                         <group width="178" height="151" alignment="center" layout="vertical" spacing="0.0" id="P9b-h4-2GX" userLabel="TestGroup">
                             <items>
-                                <group width="1" height="107" alignment="left" layout="overlap" id="3bV-sK-hdy">
+                                <group width="1" height="104" alignment="left" layout="overlap" id="3bV-sK-hdy">
                                     <items>
-                                        <timer width="33" height="18" alignment="right" textAlignment="left" format="abbreviated" previewedSeconds="0" id="mIp-zf-DSS">
+                                        <timer width="33" height="18" alignment="right" textAlignment="left" format="abbreviated" previewedSeconds="45" id="mIp-zf-DSS">
                                             <color key="textColor" red="0.020023103803396225" green="0.0047640618868172169" blue="0.0026798499748110771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <fontDescription key="font" type="system" weight="semibold" pointSize="18"/>
                                             <calendarUnit key="units" second="YES"/>
                                         </timer>
-                                        <imageView width="99" height="100" alignment="center" verticalAlignment="bottom" image="Circle" id="6EF-mk-w2M"/>
+                                        <imageView width="101" height="102" alignment="center" verticalAlignment="bottom" id="6EF-mk-w2M"/>
                                         <label alignment="center" verticalAlignment="center" text="3" id="1Hg-Od-bJS">
                                             <fontDescription key="font" type="system" weight="semibold" pointSize="35"/>
                                         </label>
                                     </items>
                                 </group>
-                                <group width="136" height="41" alignment="left" id="Atd-tt-IhQ" userLabel="ButtonsGroup">
+                                <group width="136" height="45" alignment="left" id="Atd-tt-IhQ" userLabel="ButtonsGroup">
                                     <items>
-                                        <button width="60" height="40" alignment="left" verticalAlignment="bottom" title="NO" id="vwA-ce-9Y3" userLabel="NoButton">
+                                        <button width="61" height="43" alignment="left" verticalAlignment="bottom" title="NO" id="vwA-ce-9Y3" userLabel="NoButton">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="backgroundColor" red="0.86828714609146118" green="0.23194622993469238" blue="0.18867287039756775" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <fontDescription key="font" type="system" weight="semibold" pointSize="25"/>
+                                            <fontDescription key="font" type="system" weight="semibold" pointSize="28"/>
                                             <connections>
                                                 <action selector="noButtonPressed" destination="Tko-NX-12F" id="1Mj-vW-IhC"/>
                                             </connections>
                                         </button>
-                                        <button width="58" height="41" alignment="right" verticalAlignment="bottom" title="YES" id="fWf-iS-ncw" userLabel="yesButton">
+                                        <button width="60" height="42" alignment="right" verticalAlignment="bottom" title="YES" id="fWf-iS-ncw" userLabel="yesButton">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="backgroundColor" red="0.34447327256202698" green="0.6685941219329834" blue="0.10907918959856033" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <fontDescription key="font" type="system" weight="semibold" pointSize="25"/>
+                                            <fontDescription key="font" type="system" weight="semibold" pointSize="28"/>
                                             <connections>
                                                 <action selector="yesButtonPressed" destination="Tko-NX-12F" id="jN9-YA-bXq"/>
                                             </connections>
@@ -151,7 +164,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Circle" width="222" height="222"/>
-        <image name="Frame2" width="265" height="146"/>
+        <image name="InstructionsImage" width="265" height="146"/>
     </resources>
 </document>
